# ms-sentinel-mcp-server

./: .env.example  .gitignore  .pylintrc  LICENSE  README.md  __init__.py  download_dll.py  install.ps1  llms.txt  package-lock.json  package.json  post_install.py  pyproject.toml  pytest.ini  register_components.py  repository_context.md  requirements.txt  server.py  setup.py  wrapper.py
.github/workflows/: create-llm-context.yml
docs/: llm_instructions.md
docs/architecture/: backend-structure.md  implementation-plan.md  naming_convention.md  project-requirements-document.md  prompt-architecture-doc.md  security-guideline-document.md  system-flow-document.md  tech-stack-document.md  tool-architecture-and-implementation-requirements.md
prompts/: __init__.py  kql_builder.py  security_investigation.py
resources/: __init__.py  instructions.py  kql_basics.py  kql_examples.py
resources/markdown_templates/: sentinel_workspace_get.md
resources/tool_docs/: entra_id_get_group.md  entra_id_get_user.md  entra_id_list_groups.md  entra_id_list_users.md  llm_instructions_get.md  log_analytics_saved_search_get.md  log_analytics_saved_searches_list.md  markdown_template_get.md  markdown_templates_list.md  sentinel_analytics_rule_get.md  sentinel_analytics_rule_list.md  sentinel_analytics_rule_template_get.md  sentinel_analytics_rule_templates_count_by_tactic.md  sentinel_analytics_rule_templates_count_by_technique.md  sentinel_connectors_get.md  (+31 more)
tools/: __init__.py  analytics_tools.py  authorization_tool.py  base.py  data_connector_tools.py  entra_id_tools.py  hunting_tools.py  incident_tools.py  kql_tools.py  markdown_templates_tool.py  query_tools.py  saved_search_tools.py  table_tools.py  threat_intel_tools.py  tool_docs_tools.py  watchlist_tools.py  workspace_tools.py
utilities/: __init__.py  api_utils.py  cache.py  connection_test.py  graph_api_utils.py  kql_validator.py  logging.py  path_utils.py  task_manager.py
(+3 files in other folders)
